# mcp-sql

./: README.md  dod_synthetic.db  mcp_client.py  pyproject.toml
servers/: mcp_server_mysql.py  mcp_server_oracle.py  mcp_server_sqlite.py
static/: index.html  script.js  styles.css
